# rust_zmqRemoteApi

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  run_examples.sh
.github/workflows/: rust.yml
c_transpiler/: Readme.md  ast_node.py  const_json_to_rust.py  convert.py  cpp_to_rust.py  cpp_token.py  get_consts.py  get_consts.sh  requirements.txt  stream.py
c_transpiler/assets/: consts.json  expected.h  output.rs  remote_api_header.h  sim.py  sim.rs  sim_api.py  sim_api.rs  sim_api_header.h  sim_const.rs  sim_ik.py  sim_ik.rs  sim_ik_api.py  sim_ik_api.rs  sim_ik_api_header.h
c_transpiler/ir_transpiler/: __init__.py  ir.py  ir_to_cpp.py  ir_to_macro_request_rust.py  ir_to_py.py  ir_to_string.py
c_transpiler/parser/: __init__.py  parser.py
c_transpiler/reference_scraping/: reference_scraping.py
c_transpiler/scanner/: __init__.py  ignore_chars_scan.py  scanner.py  special_chars.py  std_cpp_types_scanner.py
c_transpiler/tests/: test_convert.py  test_ir.py  test_parser.py  test_parser_and_scanner.py  test_scanner.py  test_scrapping_reference.py
examples/: get_simulation_time.rs  low_level_call.rs  p_controller.rs  send_ik_movement_sequence_mov.rs  send_ik_movement_sequence_pts.rs  sim_ik_example.rs  simple_test.rs  synchronous_image_transmission.rs  test.rs
examples/opencv_example/: Cargo.toml  Readme.md
scenes/: redundantRobot.ttt
src/: lib.rs  log_utils.rs  remote_api_objects.rs  remote_api_objects_const.rs
src/remote_api_client/: cbor_to_json.rs  client.rs  get_object.rs  get_step.rs  mod.rs  remote_api_client.rs  remote_api_client_params.rs  remote_api_client_trait.rs  set_stepping.rs
src/remote_api_objects/: api_objects.rs  (+8 more)
(+24 files in other folders)
