[package]
name = "zmq_remote_api"
version = "0.2.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]
ciborium = "0.2.0"
env_logger = "0.9.0"
log = "0.4.17"

serde = "1.0.144"
serde_json = "1.0.85"


uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
zmq = { version = "0.9.2", features = ["vendored"] }

