[package]
name = "coppeliasim_zmq_remote_api"
version = "4.10.0"
edition = "2021"
authors = ["Samuel Cavalcanti", "scavalcanti111@gmail.com"]
license-file = "LICENSE.md"
keywords = ["robotics", "CoppeliaSim", "zmq"]
categories = ["api-bindings", "science::robotics"]
description = "A ZMQ Client for CoppeliaSim"
readme = "README.md"
repository = "https://github.com/samuel-cavalcanti/rust_zmqRemoteApi.git"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
ciborium = "0.2.0"
env_logger = "0.9.0"
log = "0.4.17"

serde = "1.0.144"
serde_json = "1.0.85"


uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }
zmq = { version = "0.10.0"}
